--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <header>
     <h1>Alejandro Roa Aparicio (El inge más lindo y pitudo uwu)</h1>
-    <p>Ingeniero en formación | AWS | Robótica | Visión Artificial | Ciencia de Datos</p>
+    <p>Ingeniero en formación | AWS | Robótica | Visión Artificial</p>
   </header>
 
   <nav>
