--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Alejandro Roa Aparicio | Mechatronics & Software Engineer</title>
-    <meta name="description" content="Alejandro Roa Aparicio - Mechatronics Engineer & Software Engineer from Bogotá, Colombia. Explore my portfolio featuring robotics projects, software development, and science outreach initiatives." />
-    <meta name="keywords" content="Mechatronics Engineer, Software Engineer, Robotics, Programming, Portfolio, Alejandro Roa Aparicio, Colombia, Bogotá" />
+    <link rel="icon" type="image/png" href="/src/assets/me3.png" />
+    <title>Alejandro Roa | Alejandro Roa Aparicio - Mechatronics & Software Engineer Portfolio</title>
+    <meta name="description" content="Alejandro Roa Aparicio (Alejandro Roa) - Ingeniero Mecatrónico, Ingeniero de Software e Ingeniero de Sistemas en Bogotá, Colombia. Portfolio profesional con proyectos de robótica, ROS, visión artificial, desarrollo de software, IA, machine learning y divulgación científica." />
+    <meta name="keywords" content="Alejandro Roa, Alejandro Roa Aparicio, Ingeniero, Ingeniero Mecatrónico, Ingeniero de Software, Ingeniero de Sistemas, Ingeniero Robótica, Mechatronics Engineer, Software Engineer, Systems Engineer, Robotics Engineer, Robótica, Robotics, ROS, Robot Operating System, Visión Artificial, Computer Vision, Programming, Programación, Python, JavaScript, React, TypeScript, Portfolio, CV, Bogotá, Colombia, IA, Inteligencia Artificial, Artificial Intelligence, Machine Learning, Full Stack Developer, Desarrollador Full Stack, Science Outreach, Divulgación Científica" />
     <meta name="author" content="Alejandro Roa Aparicio" />
     
-    <meta property="og:title" content="Alejandro Roa Aparicio | Mechatronics & Software Engineer" />
-    <meta property="og:description" content="Mechatronics & Software Engineer from Bogotá, Colombia. Explore my portfolio featuring robotics projects and software development." />
+    <meta property="og:title" content="Alejandro Roa | Alejandro Roa Aparicio - Mechatronics & Software Engineer" />
+    <meta property="og:description" content="Alejandro Roa Aparicio - Ingeniero Mecatrónico y de Software en Bogotá, Colombia. Portfolio con proyectos de robótica, desarrollo de software e IA." />
+    <meta property="og:url" content="https://alejandroroa.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://alejandroroa.com/src/assets/me3.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AlejandroRoa" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://alejandroroa.com/src/assets/me3.png" />
     <link rel="canonical" href="https://alejandroroa.com" />
   </head>
 
