--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
     <meta name="twitter:site" content="@AlejandroRoa" />
     <meta name="twitter:image" content="https://alejandroroa.com/src/assets/me3.png" />
     <link rel="canonical" href="https://alejandroroa.com" />
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Alejandro Roa Aparicio",
+      "alternateName": "Alejandro Roa",
+      "url": "https://alejandroroa.engineer",
+      "image": "https://alejandroroa.engineer/src/assets/me3.png",
+      "jobTitle": "Ingeniero Mecatrónico y de Software",
+      "nationality": "Colombian",
+      "sameAs": [
+        "https://www.wikidata.org/wiki/Q137708782",
+        "https://www.linkedin.com/in/alejandro-roa-aparicio-0846211ab/",
+        "https://www.instagram.com/corto.circuitx/",
+        "https://github.com/IngenieroAlejandroRoa"
+      ]
+    }
+    </script>
   </head>
 
   <body>
