Fix Meta Data info

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AlejandroRoa" />
     <meta name="twitter:image" content="https://alejandroroa.com/src/assets/me3.png" />
-    <link rel="canonical" href="https://alejandroroa.com" />
+    <link rel="canonical" href="https://alejandroroa.engineer/" />
     
     <script type="application/ld+json">
     {
