Fix Meta Data info

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <meta property="og:title" content="Alejandro Roa | Alejandro Roa Aparicio - Mechatronics & Software Engineer" />
     <meta property="og:description" content="Alejandro Roa Aparicio - Ingeniero Mecatrónico y de Software en Bogotá, Colombia. Portfolio con proyectos de robótica, desarrollo de software e IA." />
-    <meta property="og:url" content="https://alejandroroa.com" />
+    <meta property="og:url" content="https://alejandroroa.engineer/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://alejandroroa.com/src/assets/me3.png" />
 
