--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/src/assets/me3.png" />
-    <title>Alejandro Roa | Alejandro Roa Aparicio - Mechatronics & Software Engineer Portfolio</title>
+    <title>Alejandro Roa Engineer</title>
     <meta name="description" content="Alejandro Roa Aparicio (Alejandro Roa) - Ingeniero Mecatrónico, Ingeniero de Software e Ingeniero de Sistemas en Bogotá, Colombia. Portfolio profesional con proyectos de robótica, ROS, visión artificial, desarrollo de software, IA, machine learning y divulgación científica." />
     <meta name="keywords" content="Alejandro Roa, Alejandro Roa Aparicio, Ingeniero, Ingeniero Mecatrónico, Ingeniero de Software, Ingeniero de Sistemas, Ingeniero Robótica, Mechatronics Engineer, Software Engineer, Systems Engineer, Robotics Engineer, Robótica, Robotics, ROS, Robot Operating System, Visión Artificial, Computer Vision, Programming, Programación, Python, JavaScript, React, TypeScript, Portfolio, CV, Bogotá, Colombia, IA, Inteligencia Artificial, Artificial Intelligence, Machine Learning, Full Stack Developer, Desarrollador Full Stack, Science Outreach, Divulgación Científica" />
     <meta name="author" content="Alejandro Roa Aparicio" />
